# autops-zhipu

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  修复总结.md
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_event_outbox.py  0003_status_32.py  0004_discovery_auto_onboard.py  0005_inspection_check_type.py  0006_platform_backing_tables.py  0007_inspection_rules.py  0008_exports_ticket_attachments.py  0009_trigger_history.py  0010_execution_queue.py  0011_normalize_asset_status.py  0012_discovery_task_template.py  0013_business_system_link.py  0014_model_enable_thinking.py  1027918be8a1_add_threshold_rules_notification_rules_.py  943f502eeb7f_add_inspection_anomaly_report_domains.py
backend/app/: __init__.py  main.py
backend/app/api/: agents.py  ai_assistant.py  aiops_extra.py  anomaly_router.py  audit.py  automation_extra.py  backup.py  business_systems.py  dashboard.py  exports.py  health.py  inspection_router.py  inspection_subtypes.py  model_service.py  monitoring_extra.py  platform_extra.py  report_router.py  router.py  search.py  trigger_history.py  websocket.py
backend/app/common/: audit.py  auth.py  auth_dependency.py  auth_middleware.py  auth_state.py  credentials.py  crud_service.py  crypto.py  event_handlers.py  events.py  exceptions.py  execution_queue.py  jsonutil.py  masking.py  mixins.py  outbox.py  realtime.py  repository.py  response.py  trace.py  trigger_history.py
backend/app/infra/: config.py  database.py  db_dialect.py  redis_client.py
backend/app/integrations/: __init__.py  api.py  base.py  dingtalk.py  email_channel.py  registry.py  webhook.py
backend/app/tests/: conftest.py  test_db_dialect.py  test_e2e_fullchain.py  test_integration_fullchain.py
backend/app/workers/: builtin_collectors.py  device_inspect.py  execution_worker.py  inspection_scheduler.py  runner.py  (+1 more)
(+596 files in other folders)
